[gd_scene load_steps=5 format=3 uid="uid://n2vkcc8n07ah"]

[ext_resource type="FontFile" uid="uid://b4kipanibdijo" path="res://assets/font/ROUND8-FOUR.otf" id="1_uxrve"]
[ext_resource type="Script" path="res://login.gd" id="2_qlqo2"]
[ext_resource type="PackedScene" uid="uid://d1r6rix6an4i5" path="res://Scenes/WebSocketScene/web_socket_client.tscn" id="3_jretk"]
[ext_resource type="Texture2D" uid="uid://bds5u2g2acv51" path="res://assets/loginMenu/serverOffline.png" id="4_kl2gm"]

[node name="loginMenu" type="Node2D"]
scale = Vector2(1.6, 1.6)

[node name="email" type="TextEdit" parent="."]
offset_left = 421.25
offset_top = 190.625
offset_right = 771.25
offset_bottom = 240.625
theme_override_fonts/font = ExtResource("1_uxrve")
theme_override_font_sizes/font_size = 40
placeholder_text = "email"

[node name="password" type="TextEdit" parent="."]
offset_left = 421.25
offset_top = 280.625
offset_right = 771.25
offset_bottom = 330.625
theme_override_fonts/font = ExtResource("1_uxrve")
theme_override_font_sizes/font_size = 40
placeholder_text = "password"

[node name="login" type="TextureButton" parent="."]
offset_left = 421.25
offset_top = 380.625
offset_right = 771.25
offset_bottom = 430.625
script = ExtResource("2_qlqo2")

[node name="Label" type="Label" parent="login"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -20.0
offset_right = 29.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_uxrve")
theme_override_font_sizes/font_size = 40
text = "LOGIN"

[node name="WebSocketClient" parent="login" instance=ExtResource("3_jretk")]

[node name="serverState" type="Node2D" parent="."]
position = Vector2(52.5, 631.25)

[node name="circleState" type="Sprite2D" parent="serverState"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_kl2gm")

[node name="LabelState" type="Label" parent="serverState"]
offset_left = 20.0
offset_top = -11.0
offset_right = 99.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("1_uxrve")
theme_override_font_sizes/font_size = 30
text = "Server OFF"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="login" to="login" method="_on_pressed"]
[connection signal="connected_to_server" from="login/WebSocketClient" to="login" method="_on_web_socket_client_connected_to_server"]
[connection signal="connection_closed" from="login/WebSocketClient" to="login" method="_on_web_socket_client_connection_closed"]
[connection signal="message_received" from="login/WebSocketClient" to="login" method="_on_web_socket_client_message_received"]
